<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imvLogo"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvPrivacy"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_70sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:gravity="center"
        android:text="@string/privacy"
        android:fontFamily="@font/netflix_regular"
        android:textColor="@color/GrayLight3"
        app:layout_constraintStart_toEndOf="@+id/imvLogo"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvSignIn"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/sign_in_primary"
        android:fontFamily="@font/netflix_regular"
        android:textColor="@color/GrayLight3"
        app:layout_constraintStart_toEndOf="@+id/tvPrivacy"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:id="@+id/tvCenter"
        android:gravity="center"
        android:textSize="@dimen/_28sdp"
        android:textStyle="bold"
        android:textColor="@color/GrayLight3"
        android:text="@string/unlimited_movies_tv_shows_and_more"
        android:fontFamily="@font/netflix_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="@dimen/_280sdp"
        android:layout_height="@dimen/_70sdp"
        android:id="@+id/tvSub"
        android:text="@string/watch_anywhere_cancel_anytime_tap_the_link_below_to_sign_up"
        android:textColor="@color/GrayLight3"
        android:fontFamily="@font/netflix_light"
        android:textSize="@dimen/_18sdp"
        android:gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/tvCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGetStart"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="@dimen/_45sdp"
        android:text="@string/get_started"
        android:fontFamily="@font/netflix_regular"
        android:backgroundTint="@null"
        android:textColor="@color/white"
        style="@style/MyCustomButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSub"
        />


</androidx.constraintlayout.widget.ConstraintLayout>