<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_30sdp"
        android:id="@+id/tvReadyTW"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        android:text="@string/ready_to_watch"
        android:layout_marginTop="@dimen/_90sdp"
        android:textSize="@dimen/_24sdp"
        android:textStyle="normal"
        android:gravity="center"/>
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="@dimen/_300sdp"
        android:layout_height="@dimen/_40sdp"
        android:id="@+id/tvSub"
        android:textColor="@color/black"
        android:text="@string/enter_your_email_to_create_or_sign_in_to_your_account"
        android:textSize="@dimen/_16sdp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/tvReadyTW"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtEmail"
        android:layout_width="@dimen/_300sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_80sdp"
        android:hint="@string/email"
        app:boxStrokeWidth="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSub"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="@dimen/_270sdp"
            android:layout_gravity="center"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGetStart"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/bg_button_get_started"
        android:text="@string/get_started"
        android:textSize="@dimen/_16sdp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail"
        app:layout_constraintVertical_bias="0.072" />

</androidx.constraintlayout.widget.ConstraintLayout>